--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,76 @@
 *.ini
 cit230/assignments/lesson-8/tablebuild.html
 cit230/assignments/lesson-8/jquery.js
+cit230/assignments/lesson-8/images/weather/photo-1517309230475-6736d926b979.jpg
+cit230/assignments/lesson-8/images/weather/photo-1504466664756-1adbe6d13b36.jpg
+cit230/assignments/lesson-8/images/weather/photo-1503610220663-a45ce52a7137.jpg
+cit230/assignments/lesson-8/images/weather/photo-1500487003906-9baadc8d610d.jpg
+cit230/assignments/lesson-8/images/weather/photo-1460411794035-42aac080490a.jpg
+cit230/assignments/lesson-8/images/weather/photo-1445264618000-f1e069c5920f.jpg
+cit230/assignments/lesson-8/images/weather/photo-1422198630954-189d8eb6dab3.jpg
+cit230/assignments/lesson-8/images/weather/do-the-dew.jpg
+cit230/assignments/lesson-8/images/weather/.picasaoriginals/photo-1517309230475-6736d926b979.jpg
+cit230/assignments/lesson-8/images/weather/.picasaoriginals/photo-1504466664756-1adbe6d13b36.jpg
+cit230/assignments/lesson-8/images/weather/.picasaoriginals/photo-1503610220663-a45ce52a7137.jpg
+cit230/assignments/lesson-8/images/weather/.picasaoriginals/photo-1500487003906-9baadc8d610d.jpg
+cit230/assignments/lesson-8/images/weather/.picasaoriginals/photo-1460411794035-42aac080490a.jpg
+cit230/assignments/lesson-8/images/weather/.picasaoriginals/photo-1445264618000-f1e069c5920f.jpg
+cit230/assignments/lesson-8/images/weather/.picasaoriginals/photo-1422198630954-189d8eb6dab3.jpg
+cit230/assignments/lesson-8/images/weather/.picasaoriginals/do-the-dew.jpg
+cit230/assignments/lesson-8/images/photo-1508762845150-1f4e1a91d005.jpg
+cit230/assignments/lesson-8/images/photo-1428434828181-9d110c490087.png
+cit230/assignments/lesson-8/images/images/photo-1468476396571-4d6f2a427ee7.jpg
+cit230/assignments/lesson-8/images/images/photo-1438449805896-28a666819a20.jpg
+cit230/assignments/lesson-8/images/images/.picasaoriginals/photo-1468476396571-4d6f2a427ee7.jpg
+cit230/assignments/lesson-8/images/images/.picasaoriginals/photo-1438449805896-28a666819a20.jpg
+cit230/assignments/lesson-8/images/images/.picasaoriginals/franklin-original02.jpeg
+cit230/assignments/lesson-8/images/heavy-rain.jpg
+cit230/assignments/lesson-8/images/header-franklin.jpg
+cit230/assignments/lesson-8/images/breaking-record.jpg
+cit230/assignments/lesson-7/images/weather/photo-1517309230475-6736d926b979.jpg
+cit230/assignments/lesson-7/images/weather/photo-1504466664756-1adbe6d13b36.jpg
+cit230/assignments/lesson-7/images/weather/photo-1503610220663-a45ce52a7137.jpg
+cit230/assignments/lesson-7/images/weather/photo-1500487003906-9baadc8d610d.jpg
+cit230/assignments/lesson-7/images/weather/photo-1460411794035-42aac080490a.jpg
+cit230/assignments/lesson-7/images/weather/photo-1445264618000-f1e069c5920f.jpg
+cit230/assignments/lesson-7/images/weather/photo-1422198630954-189d8eb6dab3.jpg
+cit230/assignments/lesson-7/images/weather/do-the-dew.jpg
+cit230/assignments/lesson-7/images/weather/.picasaoriginals/photo-1517309230475-6736d926b979.jpg
+cit230/assignments/lesson-7/images/weather/.picasaoriginals/photo-1504466664756-1adbe6d13b36.jpg
+cit230/assignments/lesson-7/images/weather/.picasaoriginals/photo-1503610220663-a45ce52a7137.jpg
+cit230/assignments/lesson-7/images/weather/.picasaoriginals/photo-1500487003906-9baadc8d610d.jpg
+cit230/assignments/lesson-7/images/weather/.picasaoriginals/photo-1460411794035-42aac080490a.jpg
+cit230/assignments/lesson-7/images/weather/.picasaoriginals/photo-1445264618000-f1e069c5920f.jpg
+cit230/assignments/lesson-7/images/weather/.picasaoriginals/photo-1422198630954-189d8eb6dab3.jpg
+cit230/assignments/lesson-7/images/weather/.picasaoriginals/do-the-dew.jpg
+cit230/assignments/lesson-7/images/images/unsplash_52d3d6f9853e9_1.jpg
+cit230/assignments/lesson-7/images/images/photo-1468476396571-4d6f2a427ee7.jpg
+cit230/assignments/lesson-7/images/images/photo-1438449805896-28a666819a20.jpg
+cit230/assignments/lesson-7/images/images/logo-01.png
+cit230/assignments/lesson-7/images/images/.picasaoriginals/photo-1468476396571-4d6f2a427ee7.jpg
+cit230/assignments/lesson-7/images/images/.picasaoriginals/photo-1438449805896-28a666819a20.jpg
+cit230/assignments/lesson-7/images/images/.picasaoriginals/franklin-original02.jpeg
+cit230/assignments/lesson-7/images/header-franklin.jpg
+cit230/assignments/lesson-6/images/photo-1508762845150-1f4e1a91d005.jpg
+cit230/assignments/lesson-6/images/photo-1428434828181-9d110c490087.png
+cit230/assignments/lesson-6/images/images/unsplash_52d3d6f9853e9_1.jpg
+cit230/assignments/lesson-6/images/images/photo-1468476396571-4d6f2a427ee7.jpg
+cit230/assignments/lesson-6/images/images/photo-1438449805896-28a666819a20.jpg
+cit230/assignments/lesson-6/images/images/logo-01.png
+cit230/assignments/lesson-6/images/images/.picasaoriginals/photo-1468476396571-4d6f2a427ee7.jpg
+cit230/assignments/lesson-6/images/images/.picasaoriginals/photo-1438449805896-28a666819a20.jpg
+cit230/assignments/lesson-6/images/images/.picasaoriginals/franklin-original02.jpeg
+cit230/assignments/lesson-6/images/icon_loop.png
+cit230/assignments/lesson-6/images/heavy-rain.jpg
+cit230/assignments/lesson-6/images/header-franklin.jpg
+cit230/assignments/lesson-6/images/breaking-record.jpg
+cit230/assignments/lesson-6/images/.picasaoriginals/header-franklin.jpg
+cit230/assignments/lesson-5/images/photo-1508762845150-1f4e1a91d005.jpg
+cit230/assignments/lesson-5/images/images/logo-01.png
+cit230/assignments/lesson-5/images/header-franklin.jpg
+cit230/assignments/lesson-11/Lesson4/js/jquery-3.3.1.js
+cit230/assignments/lesson-11/Lesson4/js/jquery-2.2.1.min.js
+cit230/assignments/lesson-11/Lesson4/js/.DS_Store
+cit230/assignments/lesson-11/Lesson4/.DS_Store
+cit230/assignments/lesson-10/images/banners/Document.jpg
+cit230/assignments/lesson-10/images/banners/.picasaoriginals/Document.jpg
