--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,52 @@ cit230/assignments/lesson-11/Lesson4/js/.DS_Store
 cit230/assignments/lesson-11/Lesson4/.DS_Store
 cit230/assignments/lesson-10/images/banners/Document.jpg
 cit230/assignments/lesson-10/images/banners/.picasaoriginals/Document.jpg
+cit230/assignments/mountain/tours.html
+cit230/assignments/mountain/thanks.html
+cit230/assignments/mountain/styles/normalize.css
+cit230/assignments/mountain/styles/medium.css
+cit230/assignments/mountain/styles/main.css
+cit230/assignments/mountain/styles/large.css
+cit230/assignments/mountain/services.html
+cit230/assignments/mountain/scripts/windchill.js
+cit230/assignments/mountain/scripts/towns.js
+cit230/assignments/mountain/scripts/springfield.js
+cit230/assignments/mountain/scripts/rating.js
+cit230/assignments/mountain/scripts/hamburger.js
+cit230/assignments/mountain/scripts/greenville.js
+cit230/assignments/mountain/scripts/frank-weather.js
+cit230/assignments/mountain/scripts/currentdate.js
+cit230/assignments/mountain/sales.html
+cit230/assignments/mountain/index.html
+cit230/assignments/mountain/images/logo-02.jpg
+cit230/assignments/mountain/images/header-smaller.jpg
+cit230/assignments/mountain/images/header-larger.jpg
+cit230/assignments/mountain/images/gallery/photo-1517309230475-6736d926b979.jpg
+cit230/assignments/mountain/images/gallery/photo-1504466664756-1adbe6d13b36.jpg
+cit230/assignments/mountain/images/gallery/photo-1503610220663-a45ce52a7137.jpg
+cit230/assignments/mountain/images/gallery/photo-1500487003906-9baadc8d610d.jpg
+cit230/assignments/mountain/images/gallery/photo-1460411794035-42aac080490a.jpg
+cit230/assignments/mountain/images/gallery/photo-1445264618000-f1e069c5920f.jpg
+cit230/assignments/mountain/images/gallery/photo-1422198630954-189d8eb6dab3.jpg
+cit230/assignments/mountain/images/gallery/do-the-dew.jpg
+cit230/assignments/mountain/images/flood.jpg
+cit230/assignments/mountain/images/banners/springfield-800.jpg
+cit230/assignments/mountain/images/banners/springfield-480.jpg
+cit230/assignments/mountain/images/banners/springfield-320.jpg
+cit230/assignments/mountain/images/banners/springfield-1000.jpg
+cit230/assignments/mountain/images/banners/greenville-800.jpg
+cit230/assignments/mountain/images/banners/greenville-480.jpg
+cit230/assignments/mountain/images/banners/greenville-320.jpg
+cit230/assignments/mountain/images/banners/greenville-1000.jpg
+cit230/assignments/mountain/images/banners/franklin-800.jpg
+cit230/assignments/mountain/images/banners/franklin-480.jpg
+cit230/assignments/mountain/images/banners/franklin-320.jpg
+cit230/assignments/mountain/images/banners/franklin-1000.jpg
+cit230/assignments/mountain/images/banners/Document.jpg
+cit230/assignments/mountain/images/banners/.picasaoriginals/springfield-1000.jpg
+cit230/assignments/mountain/images/banners/.picasaoriginals/greenville-1000.jpg
+cit230/assignments/mountain/images/banners/.picasaoriginals/franklin-1000.jpg
+cit230/assignments/mountain/images/banners/.picasaoriginals/Document.jpg
+cit230/assignments/mountain/events.html
+cit230/assignments/mountain/contact.html
+cit230/assignments/mountain/about.html
